syntax="proto3";


option go_package="/genproto";


package protos;

message Void{}
message  IdRequest{
  string  id=1;
}
message  LimitOffset{
  int64 limit=1;
  int64 offset=2;
}